welcome.lessons.welcome.array.island.Island.scala.error
island:5: error: not found: value nivaux
      nivaux=niveaux+1
      ^